--- a/app/assets/stylesheets/pages/_shared.scss
+++ b/app/assets/stylesheets/pages/_shared.scss
@@ -1,6 +1,10 @@
-body{
+html{
 
   a:link {
     text-decoration: none;
+  }
+
+  p{
+    margin-bottom: 0;
   }
 }
